# SmartNav-ROS2

./: LICENSE  README.md  ROBOT_MOOUVEMENT.md
install/: local_setup.sh  setup.sh
install/smartnav_core/lib/smartnav_core/: battery_simulator  canne_feedback  cmd_vel_relay  crossing_monitor  metrics_recorder  obstacle_detector  patrol  rviz_alert_node  smartnav_navigator
log/: latest_build
smartnav_core/: package.xml  setup.cfg  setup.py
smartnav_core/launch/: start_simulation.launch.py
smartnav_core/smartnav_core/: canne_feedback_node.py  car_controller.py  crossing_monitor_node.py  haptic_feedback.py  obstacle_detector.py  patrol.py  rviz_alert_node.py  smartnav_navigator.py
smartnav_core/test/: test_canne_feedback.py  test_obstacle_detector.py
smartnav_description/: CMakeLists.txt  package.xml
smartnav_description/rviz/: smartnav.rviz
smartnav_description/urdf/: smartnav.urdf.xacro  smartnav.xacro  smartnav_v2.xacro
smartnav_gazebo/: CMakeLists.txt  package.xml
smartnav_gazebo/worlds/: city.world  highway_forest.world  reset_cars.sh  smartnav.world  walk_blind_person.sh
src/: README.md
src/smartnav_core/: setup.py
src/smartnav_core/config/: smartnav_params.yaml
src/smartnav_core/smartnav_core/: obstacle_detector.py
src/smartnav_core/test/: test_obstacle_detector.py  test_rviz_alert_node.py  test_smartnav_navigator.py
src/smartnav_description/: CMakeLists.txt
src/smartnav_description/rviz/: smartnav.rviz
src/smartnav_description/urdf/: smartnav.xacro
src/smartnav_gazebo/: CMakeLists.txt
src/smartnav_gazebo/worlds/: city.world  reset_cars_loop.py
(+45 files in other folders)
