<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smartnav_gazebo</name>
  <version>1.0.0</version>
  <description>SmartNav Gazebo package: simulation worlds (city, simple) and scenario utilities for the smart white cane project.</description>
  <maintainer email="abdelfatahchaib@gmail.com">abdelfatah</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
